# researchloop

./: .gitignore  README.md  cli.py  core.py  llm.py  models.py  program.md  prompts.py  pyproject.toml  quality-bar.md  retry.py  run_config.json  run_config.py  scoring.py  search.py  source_policy.json  source_policy.py  storage.py  task_requirements.py  ui.py
docs/: prototype-plan.md
tests/: test_core.py  test_llm.py  test_task_requirements.py  test_ui.py
