[project]
name = "researchloop"
version = "0.1.0"
description = "A file-based autonomous research loop prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
researchloop = "cli:main"

[tool.setuptools]
py-modules = [
    "cli",
    "core",
    "llm",
    "models",
    "researchloop",
    "prompts",
    "retry",
    "scoring",
    "search",
    "source_policy",
    "storage",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
